Готовы блоки header, cover и lots

--- a/styles/global.css
+++ b/styles/global.css
@@ -35,4 +35,11 @@ img {
 
 button {
   font: inherit;
+  padding: 0;
+  border: 0;
+  background: none;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
 }
+
