--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,237 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    width: 1100px;
+    height: 293px;
+    background-color: #fff;
+    padding: 92px 50px;
+
+}
+
+.header__link_active {
+    list-style: none;
+}
+
+.header__links-list {
+    display: flex;
+    list-style: circle;
+    gap: 34px;
+}
+
+.header__links-list-item {
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.header__logo-image {
+    width: 148px;
+    height: 105px;
+}
+
+.header__logo {
+    display: block;
+    justify-self: center;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    max-width: 240px;
+    justify-self: end;
+    align-items: flex-start;
+}
+
+.header__address {
+    list-style: none;
+}
+
+.header__address-item {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 135%;
+    color: #000;
+    font-style: normal;
+}
+
+.cover {
+    width: 1100px;
+    min-height: 757px;
+    padding: 165px 50px 50px;
+    box-sizing: border-box;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.cover__title {
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 700; 
+    font-size: 100px; 
+    line-height: 130%; 
+    letter-spacing: 0.3em;
+    z-index: 2;
+}
+
+.alignet-text {
+    display: block;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.alignet-text_center {
+    text-align: center;
+}
+
+.alignet-text_right {
+    text-align: right;
+}
+
+.cover__description {
+    display: flex;
+    position: relative;
+    z-index: 2;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 102px;
+}
+
+.cover__description-text {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 127%;
+    text-transform: uppercase;
+    color: #fff;
+    word-spacing: 19px;
+}
+
+.bet-button {
+    font-weight: 500;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    border: 1px solid #fff;
+    width: 256px;
+    height: 50px;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.lots {
+    padding: 155px 24px 120px;
+    height: 1052px;
+}
+
+.lots__heading {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+    padding: 27px 27px 27px 40px;
+}
+
+.card {
+    position: relative; 
+    height: 596px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.lots__card-list {
+    display: flex;
+    gap: 26px;
+    list-style: none;
+    width: 1100px;
+    height: 596px;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    min-height: 596px;
+}
+
+.card, .card-link {
+    height: 100%;
+} 
+
+.card__title, .card__text {
+    position: relative;
+    z-index: 2;
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #fff;
+    padding: 48px 40px 0;
+}
+
+.card__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #fff;
+    padding: 0 40px 48px;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.lots__look-more-link {
+    font-size: 20px;
+    text-decoration: underline;
+    padding-top: 30px;
+    padding-left: 40px;
+    font-weight: 400;
+}
+
+.about {
+    width: 1052px;
+    height: 595px;
+    padding: 13px 0;
+}
+
+.footer {
+    padding: 0 50px;
+}
