--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
     justify-self: center;
 }
 
-.address {
+.header__address {
     display: flex;
     flex-direction: column;
     max-width: 240px;
@@ -43,7 +43,7 @@
     align-items: flex-start;
 }
 
-.header__address {
+.header__address-list {
     list-style: none;
 }
 
@@ -229,9 +229,110 @@
 .about {
     width: 1052px;
     height: 595px;
-    padding: 13px 0;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+
+.about__column {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    height: 595px;
+}
+
+.about__logo {
+    justify-items: center;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__logo-container {
+    width: 240px;
+    height: 240px; 
+    background-color: #000; 
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__content {
+    padding-top: 63px;
+    padding-left: 28px;
+    margin: auto;
+}
+
+.about__title {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+    padding-bottom: 100px;
+}
+
+.about__text {
+    width: 690px;
+    height: 312px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #000;   
+}
+
+.about__text-first {
+    padding-bottom: 24px;
 }
 
 .footer {
+    display: grid;
+    grid-template-columns: 1fr 163.9px 1fr;
     padding: 0 50px;
+    width: 1100px;
+    height: 180px;
+    margin-top: 155px;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.footer__menu-list-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__menu-list-item {
+    list-style: none;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 135%;
+    color: #000;
+    font-style: normal;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
+
+.footer__address {
+    display: flex;
+    align-items: flex-start;
+    width: 264.57px;
+    height: 98px;
+}
+
+.footer__menu-list-soc {
+    display: flex;
+    justify-content: end;
+    gap: 48px;
+}
+
+.prinsenghart {
+    text-decoration: none;
 }
