--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-    width: 1100px;
+    width: 100%;
     height: 293px;
     background-color: #fff;
     padding: 92px 50px;
@@ -56,7 +56,7 @@
 }
 
 .cover {
-    width: 1100px;
+    width: 100%;
     min-height: 757px;
     padding: 165px 50px 50px;
     box-sizing: border-box;
@@ -82,9 +82,9 @@
     position: relative;
     text-transform: uppercase;
     color: #fff;
-    font-weight: 700; 
-    font-size: 100px; 
-    line-height: 130%; 
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 130%;
     letter-spacing: 0.3em;
     z-index: 2;
 }
@@ -135,7 +135,7 @@
     background: transparent;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
 
 .lots {
@@ -152,7 +152,7 @@
 }
 
 .card {
-    position: relative; 
+    position: relative;
     height: 596px;
     display: flex;
     flex-direction: column;
@@ -163,7 +163,7 @@
     display: flex;
     gap: 26px;
     list-style: none;
-    width: 1100px;
+    width: 100%;
     height: 596px;
 }
 
@@ -250,9 +250,9 @@
 
 .about__logo-container {
     width: 240px;
-    height: 240px; 
-    background-color: #000; 
-    border-radius: 50%; 
+    height: 240px;
+    background-color: #000;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -278,7 +278,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
-    color: #000;   
+    color: #000;
 }
 
 .about__text-first {
@@ -289,7 +289,7 @@
     display: grid;
     grid-template-columns: 1fr 163.9px 1fr;
     padding: 0 50px;
-    width: 1100px;
+    width: 100%;
     height: 180px;
     margin-top: 155px;
 }
@@ -333,6 +333,6 @@
     gap: 48px;
 }
 
-.prinsenghart {
+.text_decoration-none {
     text-decoration: none;
 }
